Extend menu a bit to avoid language menu overflow

--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -10,7 +10,7 @@
 // header left margin (20) + logo (100) + menu left margin (10)
 @padding-big: ((@grid-gutter-width / 2) + @logo-size + @spacing);
 
-@height--nav-popup: 170px;
+@height--nav-popup: 180px;
 
 @navbar-mobile--content-height: @navbar-height - (@navbar-padding-vertical * 2);
 
